--- a/index.html
+++ b/index.html
@@ -24,14 +24,26 @@
           alt="Imagem contendo divesas ilustrações de tecnologias do mundo da programação">
       </header>
       <p class="post_content">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-        Consectetur perferendis ipsam at repellendus? Provident est,
-        laboriosam enim magnam error ea harum! Repellat nihil veritatis
-        consectetur accusantium. Iusto minus amet porro.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Facilis, eum. Dolore expedita, error voluptatum hic cupiditate
-        cum recusandae sed magnam porro itaque exercitationem excepturi
-        natus voluptatibus quas nihil distinctio architecto. <br /><br />
+        Oi pra você que está lendo este post!!!
+        Fico muito feliz de ter achado o meu pedacinho neste universo gigantesco de conteúdo que é a Internet.
+        Meu nome é Marlon Henrique, tenho 28 anos, sou natural de Belo Horizonte/MG e apaixonado pela área de
+        desenvolvimento.
+        Na data desta publicação ainda estou cursando Sistemas de Informação no Centro Universitário Newton Paiva,
+        porém espero do fundo do coração que quando estiver lendo este post eu já tenha me formado... haha <br><br>
+        Bom, a pricípio este site nada mais era que um exercício em meu estudo de HTML e CSS. Mas durante
+        o seu desenvolvimento tive a idéia de utiliza-lo como uma forma de aplicar e exercitar o conhecimento que
+        for adquirindo nesta jornada sem fim de aprendizado e aperfeiçomento em desenvolvimento Web.<br><br>
+        Pois bem, assim nasceu então este projeto que chamo de Blog Pessoal, ou seja lá qual nome queira dar... haha
+        (não sou muito bom com essa coisa de nomes kkkk) Meu objetivo aqui é ir evoluindo o site e aplicando aquilo que
+        for aprendendo com o passar do tempo, para exercitar e desenvolver minhas habilidades, até um dia ser chamado de
+        profissional.. hahah<br>
+        E de quebra repassar esse conhecimento em forma de artigos. Pretendo a cada evolução, aprendizado ou habilidade
+        adquirida, fazer
+        um post explicando o que foi adicionado ao site, como foi feito e o que aprendi com isso.. Dessa forma além de
+        exercitar
+        e desenvolver uma habilidade posso contribuir com outras pessoas que também buscam o aperfeiçomento.<br><br>
+        Bom... Então é isso... Muito obrigado mais uma vez por sua presençã e sinta-se em casa!!!
+        <br /><br />
       </p>
     </article>
   </section>
