style: Add ícones footer
Esse commit altera o estilo do footer da página ao trocar os links
em texto para seus respectivos ícones

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
         <h3 class="post_number">Post #1</h3>
         <h3 class="post_title">Introdução Pessoal e Objetivo !!!</h3>
-        <img class="post_image" src="./assets/capaPost.png"
+        <img class="post_image" src="./posts/post_1/capaPost.png"
           alt="Imagem contendo divesas ilustrações de tecnologias do mundo da programação">
       </header>
       <p class="post_content">
@@ -51,20 +51,22 @@
 
 <footer>
   <hr>
-  <ul class="contact_list">
-    <li>
-      <a href="https://www.linkedin.com/in/mhqmarques/" target="_blank">Linkedin</a>
-    </li>
-    <li>
-      <a href="https://github.com/mhqmarques" target="_blank">GitHub</a>
-    </li>
-    <li>
-      <a href="mailto:mhqmarques@gmail.com">Envie um Email!!</a>
-    </li>
-    <li>
-      <a href="tel:+5531986131547">Faça uma ligação!!!</a>
-    </li>
-  </ul>
+  <section class="contact_list">
+    <div class="contact">
+      <a href="https://www.linkedin.com/in/mhqmarques/" target="_blank"><img src="./assets/linkedin.png"
+          alt="Ícone Linkedin"></a>
+    </div>
+    <div class="contact">
+      <a href="https://github.com/mhqmarques" target="_blank"><img src="./assets/github.png" alt="Ícone GitHub"></a>
+    </div>
+    <div class="contact">
+      <a href="mailto:mhqmarques@gmail.com"><img src="./assets/gmail.png" alt="Ícone Gmail"></a>
+    </div>
+    <div class="contact">
+      <a href="tel:+5531986131547"><img src="./assets/phone.png" alt="Ícone de um telefone"></a>
+    </div>
+  </section>
+  <p>icons by Icons8</p>
 </footer>
 
 </html>
