fix: Fixado tamanho maximo box menu
Este commit fixa um valor de max-width para o box menu, para que a
diagramação da página não seja quebrada.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     /* alert('funciona') */
     const navLinks = document.getElementById('nav_links')
     const display = navLinks.style.display
-    navLinks.style.display = display === 'none' ? 'flex' : 'none'
+    navLinks.style.display = display === 'none' ? 'block' : 'none'
   }
 </script>
 
